--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@react-hook/size": "^2.1.1",
     "@react-hook/window-scroll": "^1.3.0",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
