--- a/package.json
+++ b/package.json
@@ -8,56 +8,56 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@react-hook/size": "^2.1.1",
     "@react-hook/window-scroll": "^1.3.0",
     "@vercel/analytics": "^1.0.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.2.6",
     "hamburgers": "^1.1.3",
     "image-size": "^1.0.0",
     "leaflet": "^1.7.1",
     "less": "^4.1.1",
-    "less-loader": "^8.1.1",
-    "next": "10.1.3",
+    "less-loader": "^11.1.4",
+    "next": "^14.0.4",
     "next-compose-plugins": "^2.2.1",
     "next-react-svg": "^1.1.2",
-    "nextjs-progressbar": "^0.0.9",
     "nodemailer": "^6.6.0",
     "nouislider-react": "^3.3.9",
     "nprogress": "^0.2.0",
-    "photoswipe": "^4.1.3",
-    "react": "17.0.2",
-    "react-bootstrap": "^1.5.2",
-    "react-bootstrap-typeahead": "^5.1.4",
-    "react-dom": "17.0.2",
+    "photoswipe": "^5.4.3",
+    "react": "^18",
+    "react-bootstrap": "^2.9.2",
+    "react-bootstrap-typeahead": "^6.3.2",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.5.3",
     "react-id-swiper": "^4.0.0",
     "react-image-lightbox": "^5.1.1",
-    "react-leaflet": "^2.8.0",
+    "react-leaflet": "^4.2.1",
     "react-magnifier": "^3.0.4",
     "react-parallax": "^3.3.0",
-    "react-photoswipe-gallery": "^1.3.6",
+    "react-photoswipe-gallery": "^3.0.1",
     "react-responsive-masonry": "^2.1.1",
     "react-scroll": "^1.8.1",
-    "react-select": "^3.2.0",
+    "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.8",
     "socicon": "^3.0.5",
-    "swiper": "^5.4.5"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
+    "@types/node": "20.11.0",
+    "@types/react": "^18.2.47",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
+    "prettier": "^3.2.1",
+    "typescript": "^5.3.3"
   }
 }
