--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^3.2.1",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": "18"
   }
 }
