--- a/.eslintrc
+++ b/.eslintrc
@@ -1,59 +1,3 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "react-hooks"],
-  "root": true, // Make sure eslint picks up the config at the root of the directory
-  "parserOptions": {
-    "ecmaVersion": 2020, // Use the latest ecmascript standard
-    "sourceType": "module", // Allows using import/export statements
-    "ecmaFeatures": {
-      "jsx": true // Enable JSX since we're using React
-    }
-  },
-  "settings": {
-    "react": {
-      "version": "detect" // Automatically detect the react version
-    }
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:prettier/recommended", // Make this the last element so prettier config overrides other formatting rules
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "rules": {
-    "no-prototype-builtins": "off",
-    "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off",
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "jsx-a11y/label-has-associated-control": "warn",
-    "jsx-a11y/anchor-is-valid": [
-      "error",
-      {
-        "components": ["Link"],
-        "specialLink": ["hrefLeft", "hrefRight"],
-        "aspects": ["invalidHref", "preferButton"]
-      }
-    ],
-    "jsx-a11y/no-onchange": "warn"
-  },
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true,
-    "jest": true
-  },
-  "overrides": [
-    {
-      "files": ["**/*"],
-      "excludedFiles": "*.(test|spec).tsx?",
-      "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-non-null-assertion": "warn",
-        "@typescript-eslint/no-empty-function": "off",
-        "@typescript-eslint/no-unused-vars": "warn"
-      }
-    }
-  ]
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"]
 }
