--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.3",
     "@strapi/strapi": "^4.24.0",
     "@types/node": "20.11.0",
     "@types/react": "^18.2.47",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^5.1.3",
