--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@
 .DS_Store
 *.pem
 .idea
+src/graphql/graphql-env.d.ts
+src/graphql/schema.graphql
 
 # debug
 npm-debug.log*
@@ -27,7 +29,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
 
 # vercel
 .vercel
