--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "generate-schema": "ts-node src/graphql/generateSchema.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
+    "@apollo/experimental-nextjs-app-support": "^0.11.5",
     "dotenv": "^16.4.5",
     "gql.tada": "^1.8.10",
     "next": "14.2.15",
