--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.5",
     "dotenv": "^16.4.5",
     "gql.tada": "^1.8.10",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
