--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^16.4.5",
     "gql.tada": "^1.8.10",
     "hamburger-react": "^2.5.1",
+    "lodash": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
