--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.11.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.5",
     "@radix-ui/react-dialog": "^1.1.2",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "gql.tada": "^1.8.10",
     "hamburger-react": "^2.5.1",
