--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "gql.tada": "^1.8.10",
     "hamburger-react": "^2.5.1",
+    "lightgallery": "^2.7.2",
     "lodash": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
