--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.3.1",
     "gql.tada": "^1.8.10",
     "hamburger-react": "^2.5.1",
-    "lightgallery": "^2.7.2",
     "lodash": "^4.17.21",
     "next": "14.2.15",
     "react": "^18",
