--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@apollo/experimental-nextjs-app-support": "^0.11.5",
+    "@heroicons/react": "^2.1.5",
     "@radix-ui/react-dialog": "^1.1.2",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
