--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hamburger-react": "^2.5.1",
     "lodash": "^4.17.21",
     "next": "14.2.15",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "ts-node": "^10.9.2"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
