--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
