--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.5",
     "@icons-pack/react-simple-icons": "^10.2.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.1",
